Fixed* overflow issue. Good enough for prod.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,7 @@
 }
 
 /* tell the container's children to float left: */
-.float-my-children > * {
+.float-my-children img {
     float:left;
     margin-right:5px;
 }
